@@ -16,7 +16,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- * $Id: config.h.dist,v 1.94 2001/06/11 11:54:12 leeh Exp $
+ * $Id: config.h,v 1.108 2001/06/13 18:31:20 jdc Exp $
  */
 #ifndef INCLUDED_config_h
 #define INCLUDED_config_h
@@ -139,7 +139,7 @@
  * This will not show IPs of any server to anyone, to protect hidden
  * hubs from untrustable opers.
  */
-#undef HIDE_SERVERS_IPS
+#define HIDE_SERVERS_IPS
 
 /* NETWORK_NAME
  * Displayed in place of the servername when SERVERHIDE is enabled
@@ -331,7 +331,7 @@
  *  non-opers, denying them permission to see configured ports
  *
  *  U_LINES_OPER_ONLY only applies to STATS U (capital U, not lowercase).
- *  U-lines are used to share D/K-lines between servers.
+ *  U-lines are used to share K/D-lines between servers.
  */
 #define B_LINES_OPER_ONLY
 #define E_LINES_OPER_ONLY
