@@ -1,3 +1,8 @@
+*** 20010617_5 by db
+- default to HIDE_SERVERS_IPS on
+
+
+
 *** 20010617_4 by db
 - upped patchlevel to 6.1b2
 
